--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,19 @@
     "check_your_email":"Check your email",
     "password_has_been_changed":"Password has been changed",
     "your_password_has_been_successfully_changed":"Your password has been successfully changed.",
-    "confirm_code":"Confirm code"   
+    "confirm_code":"Confirm code",
+    "rate":"rate",
+    "similar_places_near_you":"Similar places near you",
+    "the_kings_valley":"The Kings Valley",
+    "did_you_like_the_engraving":"Did you like the engraving?",
+    "rate_the_engraving":"Please rate the engraving so others can see it.",
+    "confirm":"confirm",
+    "cancel":"cancel",
+    "status":"status:",
+    "not_clear":"not clear",
+    "date_of_discovery_of_the_inscription":"Date of discovery of the inscription :",
+    "details_of_finding_the_inscription":"Details of finding the inscription:",
+    "translation_of_the_inscription":"Translation of the inscription:",
+    "closed_now":"closed now",
+    "description":"Description"   
 }
