add choseAppLang screen and conact app with flutter_localizations

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -31,5 +31,6 @@
     "details_of_finding_the_inscription":"تفاصيل العثور علي النقش :",
     "translation_of_the_inscription":"ترجمة النقش :",
     "closed_now":"مغلق الان",
-    "description":"الوصف"
+    "description":"الوصف",
+    "choose_app_language":"اختر لغة التطبيق"
 }
