--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,5 +31,6 @@
     "details_of_finding_the_inscription":"Details of finding the inscription:",
     "translation_of_the_inscription":"Translation of the inscription:",
     "closed_now":"closed now",
-    "description":"Description"   
+    "description":"Description",
+    "choose_app_language":"Choose app language"   
 }
